did part of discount

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,43 @@
   *{
     font-family: 'vazirmatn'!important;
   }
-/* ---------Bootstrap styles rewrite------------ */
+  body{
+    background-color: #f6f6f6;
+  }
+  .header-sections{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .title-sections{
+    color: #020D72;
+    padding: 0 0.5rem;
+    font-family: 'vazirmatn'!important;
+    font-size: 1.7rem;
+    font-weight: 700;
+  }
+  .image-sections{
+    height: 25px;
+  }
+  @media (max-width: 576px) {
+    .header-sections{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .title-sections{
+      color: #020D72;
+      padding: 0 0.5rem;
+      font-family: 'vazirmatn'!important;
+      font-size: 1rem;
+      font-weight: 700;
+    }
+    .image-sections{
+      height: 20px;
+    }
+  }
 
+/* ---------Bootstrap styles rewrite------------ */
   .bi::before, [class^="bi-"]::before, [class*=" bi-"]::before {
     vertical-align: -0.3em;
   }
@@ -24,7 +59,6 @@
   .btn-close:focus{
     box-shadow: none !important;
   }
-
   input:focus{
     box-shadow: none;
   }
@@ -43,7 +77,7 @@
   }
 /* ---------NavBar------------ */
 .navbar-custom{
-  background-color: #fff;
+  background-color: #f6f6f6;
 }
 .offcanvas-body_custom{
     align-items: center;
@@ -126,6 +160,7 @@
 /* ---------Header------------ */
 .header{
   margin-top: 7rem !important;
+  position: relative;
 }
 .header-banner{
   display: flex;
@@ -136,6 +171,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+
 }
 .header-banners_right_title_one{
   font-family: 'cinema'!important;
@@ -151,7 +187,6 @@
   align-self: flex-start;
   max-width: 65%;
 }
-
 .header-banners_right_btn_one{
   width: max-content;
   display: flex;
@@ -168,7 +203,6 @@
   background: #13c680;
   color: #ffffff;
 }
-
 .header-banners_right_two{
   background-color: #FFAAA6;
   border-radius: 20px;
@@ -201,7 +235,6 @@
   color: #ffffff;
   align-self: flex-end;
 }
-
 .header-banners_left{
   background-color: #FFD3B5;
   border-radius: 20px;
@@ -238,3 +271,39 @@
   background: #EA7F36;
   color: #ffffff;
 }
+.vessel_bg_right_top{
+  position: absolute;
+  top: -6%;
+  right: 5%;
+  z-index: -999;
+  width: 65px;
+}
+.vessel_bg_left_center{
+  position: absolute;
+  left: 4%;
+  top: 41%;
+  z-index: -999;
+  width: 65px;
+}
+.vessel_bg_center_bottom{
+  position: absolute;
+  bottom: -18px;
+  left: 44%;
+  z-index: -999;
+  width: 65px;
+}
+
+
+/* ---------Discount section------------ */
+.discount-section{
+  padding-top: 4rem;
+}
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
+/* ---------Header------------ */
