--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,17 @@ input:focus {
   border-radius: 5px 0 0 5px;
   font-size: 1.2rem;
 }
+.nav-search_btn {
+  padding: 0.34rem 0.75rem;
+  border: 1px solid #d3d3d3;
+  border-radius: 5px;
+  margin-left: 1rem;
+  color: #00000085;
+}
+.nav-search_btn:hover {
+  border: 1px solid #00000095;
+  color: #00000095;
+}
 .nav-shoping_btn {
   padding: 0.34rem 0.75rem;
   border: 1px solid #d3d3d3;
@@ -105,8 +116,8 @@ input:focus {
   color: #00000085;
 }
 .nav-shoping_btn:hover {
-  border: 1px solid #acacac;
-  color: #000;
+  border: 1px solid #dc3545;
+  color: #dc3545;
 }
 .nav-shoping_icon {
   font-size: 1.2rem;
@@ -144,7 +155,7 @@ input:focus {
   padding: 0.6rem 0.5rem;
   display: flex;
   justify-content: center;
-  background: #d3d3d3;
+  background: #f6f6f6;
   border-bottom: 1px solid #aeaeae;
 }
 .form_forget_password {
@@ -159,6 +170,42 @@ input:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.dropdown-menu-custom{
+  background: #f6f6f6;
+}
+/* modal search box */
+.card-search-result{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.5rem;
+  border: 2px solid #f6f6f6;
+  border-radius: 20px;
+  width: 100%;
+}
+.card-search-result_img{
+  width: 70px;
+  height: 70px;
+}
+.card-search-result:hover{
+  border: 2px solid #dbdbdb;
+}
+/* width */
+.modal-body-scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+.modal-body-scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #fff; 
+  border-radius: 10px;
+}
+/* Handle */
+.modal-body-scrollbar::-webkit-scrollbar-thumb {
+  background: #0a53be; 
+  border-radius: 10px;
+
 }
 
 /* ---------Header------------ */
@@ -748,6 +795,7 @@ input:focus {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 .move-top_btn{
   background-color: #f6f6f6;
@@ -760,7 +808,34 @@ input:focus {
   justify-content: center;
   font-size: 2.3rem;
 }
-/* --------- scroll to up btn ------------ */
+/* --------- sign in page styles ------------ */
+.breadcrumb-custom{
+  background: #f6f6f6;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-size: 12px;
+  font-weight: 600;
+}
+.form-header{
+  text-align: center;
+  border: 1px solid #aeaeae;
+  border-radius: 8px 8px 0 0;
+  border-bottom: 0;
+  padding: 0.5rem 0;
+  background: #f6f6f6;
+}
+.form-contents{
+  border: 1px solid #aeaeae;
+  border-radius: 0 0 8px 8px;
+  background: #fff;
+}
+.form-check-label-custom{
+  text-decoration: none!important;
+}
+.form-check-label-custom:hover{
+  color: rgb(220,53,69);
+}
+
 /* --------- scroll to up btn ------------ */
 /* ---------scroll to up btn------------ */
 /* ---------scroll to up btn------------ */
